# Synthra

./: .env.example  .flake8  .gitignore  CLAUDE.md  Dockerfile  README.md  build_logs4.txt  build_logs5.txt  build_logs6.txt  build_logs7.txt  build_logs8.txt  pyproject.toml  requirements.txt  run_logs3.txt  run_logs4.txt  run_logs5.txt  run_logs6.txt  run_logs7.txt
config/: base.toml  catalog.toml  development.toml  local.toml.example  production.toml
docs/: AGENTS.md  ARCHITECTURE.md  CAMPAIGNS.md  CODING_STANDARDS.md  CONSTITUTION.md  DECISIONS.md  ENGINEERING_PRINCIPLES.md  GLOSSARY.md  MENTAL_MODEL.md  PROJECT_BOOTSTRAP_v1.md  QUALITY_GATES.md  RESEARCH_PHILOSOPHY.md  ROADMAP.md  VISION.md
docs/adr/: ADR-0001.md
docs/design/: DESIGN-0001-Configuration-Manager.md  DESIGN-0002-Domain-Models.md  DESIGN_TEMPLATE.md
docs/rfc/: RFC-0001.md
docs/specs/: SPEC-0001-Configuration-Manager.md  SPEC-0002-Domain-Models.md  SPEC_TEMPLATE.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: providers.tsx
frontend/lib/: api.ts  auth-context.tsx  utils.ts
synthra/: __init__.py
synthra/api/: __init__.py  app.py  state.py
synthra/core/: __init__.py
synthra/execution/: __init__.py  client.py  exceptions.py  models.py  runner.py  transport.py
synthra/governor/: __init__.py  events.py  exceptions.py  governor.py  queue.py  scheduler.py  state.py  submission.py  submission_worker.py  telemetry.py  tracker.py  worker.py
synthra/learning/: __init__.py  analyzer.py  feedback.py  history.py  scorer.py  (+3 more)
(+118 files in other folders)
